Update index.html O added the body tags

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
       Princess Lim Senior Portfolio TAEHS
     </title>
   </head>
-
+  <body>
+    
+  </body>
+  <h1>
+    Today is Wednesday, September 13, 2023. We are going to work on a CFM assignment.
+  </h1>
 
 
   
