--- a/index.html
+++ b/index.html
@@ -15,7 +15,25 @@
   <h1>
     Today is Wednesday, September 13, 2023. We are going to work on a CFM assignment.
   </h1>
-
+  <h3> Lists of Goals to Accomplish for the Week</h3>
+    <ul>
+      <li>
+        Complete homework on time everday before the due date, specifically Math and Ap Lang
+      </li>
+      <li> 
+        Improve mistakes daily in volleyball practice, prepare for the scrimmages this week
+      </li>
+      <li>
+        Look into scholarships, aply before the end of the week
+      </li>
+      <li>
+        Feed fish everyday from evening or afternoon
+      </li>
+      <li>
+        Study for SAT for atleast 30 min everday
+      </li>
+    </ul>
+  
 
   
 </html>
