--- a/index.html
+++ b/index.html
@@ -1,39 +1,65 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name = "description" content="Thomas Edison Web and App Development">
-    <meta name= "keywords" content= "Thomas Edison">
-    <meta name="author" content="Princess Lim">
-    <title>
-      Princess Lim Senior Portfolio TAEHS
-    </title>
-  </head>
-  <body>
-    
-  </body>
-  <h1>
-    Today is Wednesday, September 13, 2023. We are going to work on a CFM assignment.
-  </h1>
-  <h3> Lists of Goals to Accomplish for the Week</h3>
-    <ul>
-      <li>
-        Complete homework on time everday before the due date, specifically Math and Ap Lang
-      </li>
-      <li> 
-        Improve mistakes daily in volleyball practice, prepare for the scrimmages this week
-      </li>
-      <li>
-        Look into scholarships, aply before the end of the week
-      </li>
-      <li>
-        Feed fish everyday from evening or afternoon
-      </li>
-      <li>
-        Study for SAT for atleast 30 min everday
-      </li>
-    </ul>
-  
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>replit</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+  <style>
+    html {
+  height: 100%;
+  width: 100%;
+}
+body {
+	margin: 0;
+}
+
+ ul{
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	width: 25%;
+	background-color: #f1f1f1;
+	position: fixed;
+	height: 100%;
+	overflow: auto;
+	 text-align:center;
+	 
+}
+
+li a {
+	display: block;
+	color: #000;
+	padding: 8px 16px;
+	text-decoration: none;
+}
+
+li a.active {
+	background-color: #04AA6D;
+	color: white;
+}
+
+li a:hover:not(.active) {
+	background-color: #555;
+	color: white;
+}
+  </style>
+</head>
+
+<body>
   
+  <ul>
+		<li><a href="" target="_blank">About Me</a></li>
+		<li><a href="https://docs.google.com/document/d/1LLwahsND02Eq8cvTe8F5yu_bR2BDa-MiXet3x9otoQg/edit?usp=sharing" target="_blank">Resume</a></li>
+		<li><a href="" target="_blank">Senior Projects</a></li>
+		<li><a href="https://mypythonportfolioontheweb-princess-aleck1.pppython22-23.repl.co/" target="_blank">Junior Porfolio</a></li>
+		<li><a href="https://web-academy-2021-2022.princess-alecks.repl.co/" target="_blank">Sophmore Portfolio</a></li>
+	</ul>
+  <h2> Projects so far</h2>
+  <ul>
+    <li> <a href="https://prinlim.github.io/Unit-6-Project" target="_blank">Unit 6 Project</a></li>
+  </ul>
+</body>
+
 </html>
