--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@ li a:hover:not(.active) {
 		<li><a href="https://web-academy-2021-2022.princess-alecks.repl.co/" target="_blank">Sophmore Portfolio</a></li>
 	</ul>
   <h2> Projects so far</h2>
-  <ul>
-    <li> <a href="https://prinlim.github.io/Unit-6-Project" target="_blank">Unit 6 Project</a></li>
-  </ul>
+  
+  <p> <a href="https://prinlim.github.io/Unit-6-Project" target="_blank">Unit 6 Project</a></p>
+
 </body>
 
 </html>
