--- a/index.html
+++ b/index.html
@@ -52,13 +52,11 @@ li a:hover:not(.active) {
   <ul>
 		<li><a href="" target="_blank">About Me</a></li>
 		<li><a href="https://docs.google.com/document/d/1LLwahsND02Eq8cvTe8F5yu_bR2BDa-MiXet3x9otoQg/edit?usp=sharing" target="_blank">Resume</a></li>
-		<li><a href="" target="_blank">Senior Projects</a></li>
+		<li><a href="https://prinlim.github.io/Unit-6-Project" target="_blank"> jQuery Adventure!</a></li>
 		<li><a href="https://mypythonportfolioontheweb-princess-aleck1.pppython22-23.repl.co/" target="_blank">Junior Porfolio</a></li>
 		<li><a href="https://web-academy-2021-2022.princess-alecks.repl.co/" target="_blank">Sophmore Portfolio</a></li>
 	</ul>
-  <h2> Projects so far</h2>
-  
-  <p> <a href="https://prinlim.github.io/Unit-6-Project" target="_blank">Unit 6 Project</a></p>
+
 
 </body>
 
