--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
-  
 </head>
 
 <body>
@@ -14,12 +13,10 @@
   <ul>
 		<li><a href="" target="_blank">About Me</a></li>
 		<li><a href="https://docs.google.com/document/d/1LLwahsND02Eq8cvTe8F5yu_bR2BDa-MiXet3x9otoQg/edit?usp=sharing" target="_blank">Resume</a></li>
-		<li><a href="https://prinlim.github.io/Unit-6-Project" target="_blank"> jQuery Adventure!</a></li>
+		<li><a href="https://prinlim.github.io/Unit-6-Project" target="_blank">jQuery Adventure</a></li>
 		<li><a href="https://mypythonportfolioontheweb-princess-aleck1.pppython22-23.repl.co/" target="_blank">Junior Porfolio</a></li>
 		<li><a href="https://web-academy-2021-2022.princess-alecks.repl.co/" target="_blank">Sophmore Portfolio</a></li>
 	</ul>
-
-
 </body>
 
 </html>
